# cmat

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  matrix.cpp  matrix.h  test_matrix.cpp
tests/: test_matrix.cpp
